--- a/InvoiceInput.Win/App.config
+++ b/InvoiceInput.Win/App.config
@@ -1,19 +1,14 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="Modules" value=""/>
-    <add key="NewVersionServer" value=""/>
-    <add key="EnableDiagnosticActions" value="False"/>
-    <!--
-    Use the one of predefined values: None, ApplicationFolder, CurrentUserApplicationDataFolder. The default value is ApplicationFolder.
-    <add key="TraceLogLocation" value="CurrentUserApplicationDataFolder"/>
-    <add key="UserModelDiffsLocation" value="CurrentUserApplicationDataFolder"/>
-    <add key="Languages" value="de;es;ja;ru"/>
-    -->
+    <add key="Modules" value="" />
+    <add key="NewVersionServer" value="" />
+    <add key="EnableDiagnosticActions" value="False" />
+    <add key="Languages" value="zh-CHS" />
   </appSettings>
   <connectionStrings>
     <add name="EasyTestConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\mssqllocaldb;Initial Catalog=InvoiceInputEasyTest"/>
-    <add name="ConnectionString" connectionString="Integrated Security=SSPI;Pooling=false;Data Source=(localdb)\mssqllocaldb;Initial Catalog=InvoiceInput" />
+    <add name="ConnectionString" connectionString="XpoProvider=MSAccess;Provider=Microsoft.ACE.OLEDB.12.0;Mode=Share Deny None;data source=E:\外代理账单.accdb;Jet OLEDB:Database Password=;" />
     <!--
     Use the following connection string to connect to a Jet (Microsoft Access) database:
     <add name="ConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Password=;User ID=Admin;Data Source=InvoiceInput.mdb;Mode=Share Deny None;"/>
